check if there are selections

--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<div qv-extension style="height: 100%; position: relative; overflow: auto;" class="ng-scope" id="SenseUI-DropDown">
+<div qv-extension class="ng-scope" id="SenseUI-DropDown">
 	<div class="dropdown">
 		<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 			{{currentItem}}
